@@ -34,6 +34,7 @@ ver 0.21 (not yet released)
   - shout: support the Shine encoder plugin
   - sndio: remove support for the broken RoarAudio sndio emulation
   - osx: initial support for DSD over PCM
+  - httpd_output: support for unix sockets
 * mixer
   - sndio: new mixer plugin
 * encoder
